--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
 
 
 <% if user_signed_in? %>
-  <p><%= current_user.email %></p>
+  <p>Signed in as <%= @user.first_name %> <%= @user.last_name %></p>
   <p><%= link_to("Sign Out", destroy_user_session_path, :method => :delete) %></p>
 <% else %>
-  <p>No user</p>
+  <p><%= link_to('Sign Up', new_user_registration_path) %> | <%= link_to('Sign In', new_user_session_path) %></p>
 <% end %>
