--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,18 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Apiara</h1>
 
+<%= link_to "Show All Users", users_path %><br/>
+<%= link_to "Show All Devices", all_devices_path %><br/>
+<%= link_to "Show All Hives", all_hives_path %><br/>
+<%= link_to "Show All HiveDays", hivedays_path %><br/>
+<%= link_to "Show All HiveDays For Hive 'sample' From 7/10/2013 through 7/17/2013", 
+    hive_days_range_path("sample", Time.new(2013, 7, 10).to_i, Time.new(2013, 7, 18).to_i) %>
 
 <% if user_signed_in? %>
   <p>Signed in as <%= @user.first_name %> <%= @user.last_name %></p>
+  <p>
+    <%= link_to "Your Devices", devices_path %><br/>
+    <%= link_to "Your Hives", hives_path %><br/>
+  </p>
   <p><%= link_to("Sign Out", destroy_user_session_path, :method => :delete) %></p>
 <% else %>
   <p><%= link_to('Sign Up', new_user_registration_path) %> | <%= link_to('Sign In', new_user_session_path) %></p>
