can add hives from show all hives and devices from show all devices. both are admin only. added a page to tell user they are unauthorized.

--- a/app/views/hives/new.html.erb
+++ b/app/views/hives/new.html.erb
@@ -15,12 +15,11 @@
     </div>
   <% end %>
   
-  <p>This form will be filled out with more stuff later.<br/>
+<!--  <p>This form will be filled out with more stuff later.<br/>
     For now, userid is handled in the controller (that<br/>
     never needs to be seen by the user), and there is no<br/>
-    geolocation stuff happening.</p>
+    geolocation stuff happening.</p>-->
   
-  <!-- maybe make this a dropdown of all available devices? -->
   <div><%= f.label :deviceid %><br />
   <%= f.text_field :deviceid, :autofocus => true %></div>
 
