--- a/app/views/hives/new.html.erb
+++ b/app/views/hives/new.html.erb
@@ -20,8 +20,11 @@
     never needs to be seen by the user), and there is no<br/>
     geolocation stuff happening.</p>-->
   
-  <div><%= f.label :deviceid %><br />
-  <%= f.text_field :deviceid, :autofocus => true %></div>
+  <div><%= f.label :hiveid %><br />
+  <%= f.text_field :hiveid, :autofocus => true %></div>
+  
+<!--  <div><%= f.label :deviceid %><br />
+  <%= f.text_field :deviceid, :autofocus => true %></div>-->
 
   <div><%= f.label :details %><br />
   <%= f.text_field :details %></div>
