--- a/app/views/devices/all_devices.html.erb
+++ b/app/views/devices/all_devices.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Device ID</th>
     <th>Hive ID</th>
     <th>User ID</th>
     <th>State</th>
@@ -12,6 +13,7 @@
 
 <% @devices.each do |device| %>
   <tr>
+    <td><%= device.deviceid %></td>
     <td><%= device.hiveid %></td>
     <td><%= device.userid %></td>
     <td><%= device.state %></td>
