--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Apiara</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <script src="/javascripts/jquery-1.7.2.min.js" type="text/javascript"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
